--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,18 @@ authors:
 homepage: https://github.com/thyagoluciano/flutter_launch_whatsapp
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.7.0
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
